Fix product list size on mobile

--- a/src/scss/custom/components/category/_product-list.scss
+++ b/src/scss/custom/components/category/_product-list.scss
@@ -4,16 +4,6 @@
     padding-right: 3rem;
   }
 
-  .products {
-    .product-miniature {
-      width: 33.33%;
-
-      &-image-container {
-        height: 17.0625rem;
-      }
-    }
-  }
-
   .products-selection {
     margin-bottom: 1.25rem;
 
